Refactor the code